# synthefy-client-performance

./: README.md  chart_gpu8000_cpu8001.py  example_async.py  example_basic.py  example_dataframes.py  mod-results.csv  new-results.csv  nohup.out  performance_test.py  performance_test_http.py  pyproject.toml  requests_per_minute_from_results.csv  requests_per_minute_new_results.csv  requirements.txt  results.csv  results_gpu8000_cpu8001.csv  results_localhost_8000.csv  results_migas_1_5.csv  visualize_performance.py
synthefy_client_examples.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
