[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthefy_client_with_obscure_image"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "synthefy_client_with_obscure_image"
version = "0.1.0"
description = "Example scripts demonstrating Synthefy client usage"
authors = [
    {name = "Synthefy", email = "contact@synthefy.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "synthefy==2.0.5",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "pyright>=1.1.406",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]


[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

